Add buttons for percentage, square root, and square
Signed-off-by: shreyashoplevel-glitch <shreyashoplevel@gmail.com>

--- a/index.html
+++ b/index.html
@@ -34,6 +34,9 @@
         <button class="equal" onclick="calculate()">=</button>
         <button onclick="displaytoscreen('/')" class="operator-btn">/</button>
         <button onclick="delete_backspace('backspace')" class="operator-btn"><-</button>
+        <button onclick="displaytoscreen('%')" class="operator-btn">%</button>
+        <button onclick="displaytoscreen('√')" class="operator-btn">√</button>
+        <button onclick="displaytoscreen('x²')" class="operator-btn">x²</button>
     </div>
 </div>
 
